# mesh-parameterization

./: CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake
include/: geometry_images.h  io_utils.h
src/: geometry_images.cpp  io_utils.cpp  main.cpp
